# ffparquet

./: .gitignore  Cargo.toml  env.sh  test.yaml
examples/: cat.rs  cat2.rs  datatype.rs  df.rs  df.yaml  old.rs  sdari.rs  test.yaml  testyaml.rs
src/: main.rs  main2.rs
src/cmd/: cat.rs  df.rs  merge.rs  meta.rs  mod.rs  split.rs  utils.rs
