[package]
name = "ffparquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
parquet = { version = "50.0.0", features = ["cli"] }
arrow = { version = "50.0.0", features = ["chrono-tz"] }
arrow-array = "50.0.0"
clap = { version = "4.2.7", features = ["derive"] }