[package]
name = "ffparquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
parquet = { version = "51.0.0", features = ["cli"] }
arrow = { version = "51.0.0", features = ["chrono-tz"] }
arrow-array = "51.0.0"
clap = { version = "4", features = ["derive"] }
eyre = "0.6.12"