[package]
name = "pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
parquet = { version = "51.0.0", features = ["cli"] }
arrow = { version = "51.0.0", features = ["chrono-tz"] }
arrow-array = "51.0.0"
clap = { version = "4", features = ["derive"] }
eyre = "0.6.12"
serde_json = "1.0.114"
datafusion = "36.0.0"
datafusion-common = "36.0.0"
tokio = { version = "1.36.0", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.9"